# WarMachine

./: Cargo.toml  README.asciidoc
conf/: war_machine.toml
src/: lib.rs  main.rs
src/client/: cassandra.rs
src/conf/: toml.rs
src/server/: http.rs
