[package]
name = "war_machine"
version = "0.1.0"
authors = ["Tupshin Harper <tupshin@tupshin.com>", "Jonathan Shook", "Jon Haddad"]

[[bin]]
name="war_machine"
path="src/main.rs"

#preemptively adding all the dependencies I think we are likely to need
[dependencies]
clippy = "*"
mio = "0.3.0"
lz4 = "1.7.129"
snappy = "0.2.0"
log = "0.3.1"
rand = "0.3.9"
bitflags = "0.3.2"
time = "0.1.32"
openssl-sys = "0.6.4"
num = "0.1.25"
lazy_static = "0.1.12"
byteorder = "0.3.11"
num_cpus = "0.2.6"
tempdir = "0.3.4"
docopt = "0.6.69"
toml = "0.1.21"
clock_ticks = "0.0.6"
enum_primitive = "0.0.2"
quasi_codegen = "0.3.1"
chrono = "0.2.15"
uuid = "0.1.17"
itertools = "0.3.23"
serde = "0.4.3"
# serde_codegen = "0.4.3"
mmap = "0.1.1"
rust-crypto = "0.2.31"
error = "0.1.7"
quickcheck = "0.2.21"
# bswap = "0.2.2"
locale = "0.1.8"
rustful = "0.3"
cassandra = "*"
iron = "*"
